# Healthcare-MCP

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
docs/: index.md
docs/specification/: auth.md  context.md  guardrails.md  hmcp_auth_vs_mcp_auth.md  index.md  sampling.md
docs/tutorial/: 01_hmcp_server_.md  02_hmcp_client_.md  03_authentication__oauth___jwt__.md  04_sampling_functionality_.md  05_guardrails_.md  06_auth_configuration_.md  07_jwt_handler_.md  index.md
examples/: .env.example  README.md  hmcp_demo.py  hmcp_llm_demo.py  requirements.txt
search/: search_index.json
specification/: index.html
specification/auth/: index.html
specification/context/: index.html
specification/examples/: index.html
specification/guardrails/: index.html
specification/hmcp_auth_vs_mcp_auth/: index.html
specification/hmcp_python_sdk/: index.html
specification/sampling/: index.html
src/hmcp/: README.md
src/hmcp/auth/: __init__.py  config.py  exceptions.py  jwt_handler.py  oauth_client.py  oauth_server.py  utils.py
src/hmcp/config/: actions.py  config.yml  prompt.yml
src/hmcp/mcpclient/: hmcp_client.py  register_client.py
tutorial/: index.html
tutorial/01_hmcp_server_/: index.html
tutorial/02_hmcp_client_/: index.html
tutorial/03_authentication__oauth___jwt__/: index.html
tutorial/04_sampling_functionality_/: index.html
tutorial/05_guardrails_/: index.html
tutorial/06_auth_configuration_/: index.html
tutorial/07_jwt_handler_/: index.html
(+3 files in other folders)
